kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: airports
  namespace: stg-services
spec:
  selector:
    app: airports
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
