kubernetes-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: airports
  namespace: webworks
  labels:
    app: airports
spec:
  rules:
    - host: airports.webworks.fctg-digital-booking-non-production.fcl.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: airports
              servicePort: 80
